2008-02-14  Anthony Green  <green@redhat.com>

	* index.html (href): Update license reference.

2008-02-14  Anthony Green  <green@redhat.com>

	* index.html: Fix tarball reference.

2008-02-14  Anthony Green  <green@redhat.com>

	* index.html: Update!

2003-11-03  Anthony Green  <green@redhat.com>

	* index.html (href): Add link to Gianni's home page.

Thu Dec  5 17:28:31 2002  Anthony Green  <green@redhat.com>

	* index.html: Cygnus is now Red Hat.

1999-05-12  Jason Molenda  (jsm@bugshack.cygnus.com)

	* index.html: Add links to libffi* mail list archives.

1999-04-26  Jason Molenda  (jsm@bugshack.cygnus.com)

	* index.html: Missed a reference to libffi-discuss@cygnus.com.  Fixed.

1999-04-26  Jason Molenda  (jsm@bugshack.cygnus.com)

	* index.html: Change links to ftp directory to point to sourceware
	directory.
	Change mailing list subscription forms to point to sourceware lists.

1998-11-30  Anthony Green  <green@cygnus.com>

	* index.html: Reformatted and updated to reflect hosting on
	sourceware.cygnus.com (new mailing lists, etc).

1998-11-29  Anthony Green  <green@cygnus.com>

	* index.html: Created (bootstrapped from old web pages).
