@@ -1,5 +1,9 @@
 2008-02-14  Anthony Green  <green@redhat.com>
 
+	* index.html: New release.
+
+2008-02-14  Anthony Green  <green@redhat.com>
+
 	* index.html (href): Update license reference.
 
 2008-02-14  Anthony Green  <green@redhat.com>
